<resources>
    <string name="app_name">QMeNow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_scan_barcode_text">scan for appointments</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_barcode_message">Sorry, that barcode is invalid.</string>
    <string name="invalid_business_barcode_message">Sorry, that Business barcode is invalid.</string>
    <string name="invalid_customer_barcode_message">Sorry, that Customer barcode is invalid.</string>
    <string name="valid_barcode_message">Great, that\'s a valid barcode.</string>
    <string name="btn_enter_user_text">Enter user details</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_CustomerId">Customer Id</string>
    <string name="user_saved_successfully">User saved successfully.</string>
    <string name="btn_scan_user_details">Scan user from barcode</string>
    <string name="or">or</string>
    <string name="getting_appointments_message">Searching for appointments...</string>
    <string name="dialogTitle">please wait...</string>
    <string name="dialogMessage">...looking for appointments</string>
    <string name="check_in">Check-in</string>
    <string name="labelWebHelperBaseURL">webHelperBaseURL</string>
    <string name="webserviceBaseURL">http://</string>
    <string name="settings_saved_successfully">Settings Saved Successfully</string>
    <string name="noAppointmentsFound">Sorry, no appointments found for today.</string>
    <string name="remove_user_details">Remove saved user details</string>
    <string name="save">Save</string>
    <string name="user_removed_successfully">User details removed successfully</string>
    <string name="customerDoesntExistAtThisBusiness">Sorry, that customer doesn\'t exist at this business</string>
    <string name="appointment_already_checked_in">Appointment already checked in.</string>
    <string name="appointment_checked_in_at">Appointment checked in at</string>
    <string name="label_refnum">Ref:</string>
    <string name="label_appointment_date">Date and time:</string>
    <string name="label_appointment_type">Type:</string>
    <string name="label_status">Status:</string>
    <string name="label_location">Location:</string>
    <string name="label_customer_message">Message:</string>
    <string name="btn_view_appointments_text">View Appointments</string>
    <string name="btn_check_in_progress">checking in...</string>
    <string name="check_in_failed">Sorry, Check-in failed, please see a member of staff.</string>
    <string name="check_in_successful">Check-in Successful</string>
</resources>
