<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/ll_main"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

    <EditText
        android:id="@+id/etFirstName"
        android:hint="@string/hint_first_name"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:minWidth="@dimen/button_width" />

    <EditText
        android:id="@+id/etSurname"
        android:hint="@string/hint_surname"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:minWidth="@dimen/button_width" />

    <EditText
        android:id="@+id/etCustomerId"
        android:hint="@string/hint_CustomerId"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:inputType="number"
        android:minWidth="@dimen/button_width" />

    <Button
        android:id="@+id/btnSubmitUserDetails"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:drawableLeft="@drawable/save_icon"
        android:minWidth="@dimen/button_width" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/or"
        android:textSize="26dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnScanUserDetails"
        android:text="@string/btn_scan_user_details"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:drawableLeft="@drawable/scan_icon"
        android:minWidth="@dimen/button_width" />

    <Button
        android:id="@+id/btnRemoveUserDetails"
        android:text="@string/remove_user_details"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:drawableLeft="@drawable/delete_icon"
        android:minWidth="@dimen/button_width"
        />

    </LinearLayout>

</FrameLayout>