<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/general_text_size"
            android:id="@+id/txtContent"/>
        <Button
            android:id="@+id/btn_enter_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_width"
            android:padding="30dip"
            android:textSize="@dimen/general_text_size"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_enter_user_text"/>
        <Button
            android:id="@+id/btn_scan_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_width"
            android:padding="30dip"
            android:textSize="@dimen/general_text_size"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_scan_barcode_text"/>
        <Button
            android:id="@+id/btn_view_appointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_width"
            android:padding="30dip"
            android:enabled="false"
            android:textSize="@dimen/general_text_size"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_view_appointments_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgview"/>
    </LinearLayout>
</FrameLayout>