<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

<!--Ref Num-->
    <LinearLayout
        android:id="@+id/layout_refnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appointment_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/appointment_light"/>

        <TextView
            android:id="@+id/tvAppointmentRefNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#f3f3f3"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_marginRight="50dp"
            />

    </LinearLayout>

<!--Customer Message-->
<!--    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/general_text_size"
            android:text="@string/label_customer_message"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="@dimen/general_text_size"
            android:id="@+id/messageToCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>-->

<!--Appointment Date and time-->
    <LinearLayout
        android:id="@+id/layout_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:textSize="@dimen/general_text_size"
            android:text="@string/label_appointment_date"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/general_text_size"
                android:id="@+id/strAppointmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textStyle="bold"/>

            <TextView
                android:textSize="@dimen/general_text_size"
                android:id="@+id/strAppointmentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <!--Location-->
    <RelativeLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_label_appointment_location"
            android:textSize="@dimen/general_text_size"
            android:text="@string/label_location"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/locationName"
            android:textSize="@dimen/general_text_size"
            android:layout_marginLeft="@dimen/circle_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toRightOf="@id/tv_label_appointment_location"/>

        <ImageView
            android:id="@+id/locationCircle"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:src="@drawable/circle"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>

    <!--Status-->
    <RelativeLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_label_appointment_status"
            android:textSize="@dimen/general_text_size"
            android:text="@string/label_status"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/statusName"
            android:textSize="@dimen/general_text_size"
            android:layout_marginLeft="@dimen/circle_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_label_appointment_status"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/statusCircle"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:src="@drawable/square"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>

    <!--Appointment type-->
    <RelativeLayout
        android:id="@+id/layout_appointment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_label_appointment_type"
            android:textSize="@dimen/general_text_size"
            android:text="@string/label_appointment_type"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/appointmentTypeName"
            android:textSize="@dimen/general_text_size"
            android:layout_marginLeft="@dimen/circle_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toRightOf="@id/tv_label_appointment_type"/>

        <ImageView
            android:id="@+id/appointmentTypeCircle"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:src="@drawable/circle"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <Button
        android:textSize="@dimen/general_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheckin"
        android:drawableLeft="@drawable/check_in_icon"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/check_in"/>
</LinearLayout>

<!--</FrameLayout>-->
